--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/lab": "^4.0.0-alpha.28",
+    "@material-ui/pickers": "^3.2.6",
+    "convert-csv-to-json": "0.0.15",
+    "date-fns": "^2.0.0-beta.5",
+    "firebase": "^6.6.2",
     "react": "^16.9.0",
+    "react-detect-offline": "^2.4.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-js-search": "^0.2.4",
+    "react-offline": "^0.1.0",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.2",
+    "react-svg": "^10.0.22",
+    "react-to-print": "^2.4.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
